Fix some minor issues discovered by PMD (Programming Mistake Detector) plugins