@@ -60,11 +60,9 @@ public class RpcUtils {
 
     public static Class<?> getReturnType(Invocation invocation) {
         try {
-            if (invocation != null
-                    && invocation.getInvoker() != null
-                    && invocation.getInvoker().getUrl() != null
-                    && invocation.getInvoker().getInterface() != GenericService.class
-                    && !invocation.getMethodName().startsWith("$")) {
+            if (invocation != null && invocation.getInvoker() != null && invocation.getInvoker().getUrl() != null
+                    && invocation.getInvoker().getInterface() != GenericService.class && !invocation.getMethodName()
+                    .startsWith("$")) {
                 String service = invocation.getInvoker().getUrl().getServiceInterface();
                 if (StringUtils.isNotEmpty(service)) {
                     Method method = getMethodByService(invocation, service);
@@ -79,11 +77,9 @@ public class RpcUtils {
 
     public static Type[] getReturnTypes(Invocation invocation) {
         try {
-            if (invocation != null
-                    && invocation.getInvoker() != null
-                    && invocation.getInvoker().getUrl() != null
-                    && invocation.getInvoker().getInterface() != GenericService.class
-                    && !invocation.getMethodName().startsWith("$")) {
+            if (invocation != null && invocation.getInvoker() != null && invocation.getInvoker().getUrl() != null
+                    && invocation.getInvoker().getInterface() != GenericService.class && !invocation.getMethodName()
+                    .startsWith("$")) {
                 Type[] returnTypes = null;
                 if (invocation instanceof RpcInvocation) {
                     returnTypes = ((RpcInvocation) invocation).getReturnTypes();
@@ -110,7 +106,7 @@ public class RpcUtils {
 
     public static Long getInvocationId(Invocation inv) {
         String id = inv.getAttachment(ID_KEY);
-        return id == null ? null : new Long(id);
+        return id == null ? null : Long.valueOf(id);
     }
 
     /**
@@ -136,8 +132,7 @@ public class RpcUtils {
 
     public static String getMethodName(Invocation invocation) {
         if (($INVOKE.equals(invocation.getMethodName()) || $INVOKE_ASYNC.equals(invocation.getMethodName()))
-                && invocation.getArguments() != null
-                && invocation.getArguments().length > 0
+                && invocation.getArguments() != null && invocation.getArguments().length > 0
                 && invocation.getArguments()[0] instanceof String) {
             return (String) invocation.getArguments()[0];
         }
@@ -146,8 +141,7 @@ public class RpcUtils {
 
     public static Object[] getArguments(Invocation invocation) {
         if (($INVOKE.equals(invocation.getMethodName()) || $INVOKE_ASYNC.equals(invocation.getMethodName()))
-                && invocation.getArguments() != null
-                && invocation.getArguments().length > 2
+                && invocation.getArguments() != null && invocation.getArguments().length > 2
                 && invocation.getArguments()[2] instanceof Object[]) {
             return (Object[]) invocation.getArguments()[2];
         }
@@ -156,8 +150,7 @@ public class RpcUtils {
 
     public static Class<?>[] getParameterTypes(Invocation invocation) {
         if (($INVOKE.equals(invocation.getMethodName()) || $INVOKE_ASYNC.equals(invocation.getMethodName()))
-                && invocation.getArguments() != null
-                && invocation.getArguments().length > 1
+                && invocation.getArguments() != null && invocation.getArguments().length > 1
                 && invocation.getArguments()[1] instanceof String[]) {
             String[] types = (String[]) invocation.getArguments()[1];
             if (types == null) {
@@ -244,9 +237,8 @@ public class RpcUtils {
 
     private static Method getMethodByService(Invocation invocation, String service) throws NoSuchMethodException {
         Class<?> invokerInterface = invocation.getInvoker().getInterface();
-        Class<?> cls = invokerInterface != null
-                ? ReflectUtils.forName(invokerInterface.getClassLoader(), service)
-                : ReflectUtils.forName(service);
+        Class<?> cls = invokerInterface
+                != null ? ReflectUtils.forName(invokerInterface.getClassLoader(), service) : ReflectUtils.forName(service);
         Method method = cls.getMethod(invocation.getMethodName(), invocation.getParameterTypes());
         if (method.getReturnType() == void.class) {
             return null;
@@ -287,8 +279,7 @@ public class RpcUtils {
         int timeout = (int) defaultTimeout;
         if (countdown == null) {
             if (url != null) {
-                timeout = (int) RpcUtils.getTimeout(
-                        url, methodName, RpcContext.getClientAttachment(), invocation, defaultTimeout);
+                timeout = (int) RpcUtils.getTimeout(url, methodName, RpcContext.getClientAttachment(), invocation, defaultTimeout);
                 if (url.getMethodParameter(methodName, ENABLE_TIMEOUT_COUNTDOWN_KEY, false)) {
                     // pass timeout to remote server
                     invocation.setObjectAttachment(TIMEOUT_ATTACHMENT_KEY, timeout);
